--- a/src/ui/MainMenu.form
+++ b/src/ui/MainMenu.form
@@ -339,9 +339,12 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="jLabel8"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel11MouseClicked"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="10" width="64" height="64"/>
+                  <AbsoluteConstraints x="20" y="10" width="70" height="64"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -350,11 +353,14 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Papyrus" size="14" style="1"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="AMC"/>
+                <Property name="text" type="java.lang.String" value="  AMC"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel12MouseClicked"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="30" y="80" width="-1" height="-1"/>
+                  <AbsoluteConstraints x="30" y="80" width="40" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
